# hstatus

./: LICENSE  README.md  hstatus.cabal  stack.yaml
app/: Main.hs
src/: CPUUsageSegment.hs  DateSegment.hs  DriveSpaceSegment.hs  Formatter.hs  LemonbarFormatter.hs  Lib.hs  LoadSegment.hs  MemorySegment.hs  NetworkSegment.hs  Segment.hs  StdinSegment.hs  TimeSegment.hs
src/Segment/: CPUUsage.hs  Date.hs  DriveSpace.hs  Memory.hs  Network.hs  Segments.hs  Stdin.hs  SysLoad.hs  Time.hs
