name:                hstatus
version:             0.1.0.0
synopsis:            System status information source
description:         Please see README.md
homepage:            https://github.com/mhweaver/hstatus#readme
license:             BSD3
license-file:        LICENSE
author:              mhweaver
maintainer:          mhweaver@gmail.com
copyright:           2016 mhweaver
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Formatter
                     , LemonbarFormatter
                     , Segment
                     , Segment.Segments
  other-modules:       Segment.Stdin
                     , Segment.Time
                     , Segment.Date
                     , Segment.Memory
                     , Segment.SysLoad
                     , Segment.CPUUsage
                     , Segment.Network
                     , Segment.DriveSpace
  build-depends:       base >= 4.7 && < 5
                     , time >= 1.6.0.1
                     , text
                     , text-icu >= 0.7.0.1
                     , disk-free-space >= 0.1.0.1
  default-language:    Haskell2010

executable hstatus
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O3 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , hstatus
  default-language:    Haskell2010

test-suite hstatus-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hstatus
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mhweaver/hstatus
